Fixed some erros regarding the spacing on the right side

--- a/style.css
+++ b/style.css
@@ -571,9 +571,10 @@ h2 {
 
     /* About Me Text styles */
     #aboutme {
-        font-size: 8px;
+        font-size: 10px;
         padding: 4% 2%;
         max-width: 100%;
+        line-height: 1.6;
     }
 
     .text-content {
@@ -710,6 +711,13 @@ h2 {
 
     h1 {
         font-size: 24px;
+    }
+
+    .content-wrapper {
+        display: flex;
+        align-items: center;
+        margin-right: 0; 
+        margin-left : 11%;
     }
 }
 
